<resources>
    <string name="app_name">Blipp</string>
    <string name="Tab_1">Near Me</string>
    <string name="Tab_2">Community</string>
    <string name="Tab_3">My Blips</string>
    <string name="Tab_4">Liked Blips</string>
    <string name="Tab_5">Options</string>
    <string name="settings_txtView">Select Blipp Distance</string>
    <string name="settings_radio_close">Close Distance</string>
    <string name="settings_radio_regular">Regular Distance</string>
    <string name="settings_radio_super">Super Distance</string>
    <string name="settings_button">Log Out</string>
    <string name="my_blipps_txt">My Blips</string>
    <string name="feed_distance_lbl">Select Blipp Radius</string>
    <string name="feed_order_lbl">Select Blip Ordering</string>
    <string name="liked_blipps_txt">Liked Blips</string>
    <string name="fab_description">Make a blip</string>
    <string name="community_joined_order">Select Community Ordering</string>
    <string name="login_btn_reset">Password Reset</string>
    <string name="login_btn_register">Register</string>
    <string name="login_btn_login">Log In</string>
    <string name="login_password">password</string>
    <string name="login_email">email</string>
    <string name="login_logo">Blipp Logo</string>
    <string name="register_button_submit">Submit</string>
    <string name="register_phone_number">phone number</string>
    <string name="register_name">name</string>
    <string name="register_password_confirm">confirm password</string>
    <string name="register_password">password</string>
    <string name="register_email">email</string>
    <string name="register_message">Please Enter Your Information</string>
    <string name="reset_opps">uh ohh…</string>
    <string name="reset_email">Please Enter Your Email Address</string>
    <string name="reset_reset">RESET</string>

    <string-array name="blipp_options">
        <item>Change User Information</item>
        <item>Create Community</item>
        <item>Join Community</item>
        <item>Manage Communities</item>
    </string-array>

    <string-array name="blipp_distances">
        <item>Close Distance</item>
        <item>Regular Distance</item>
        <item>Max Distance</item>
    </string-array>

    <string-array name="blipp_order">
        <item>Most Recent</item>
        <item>Most Liked</item>
    </string-array>

    <string-array name="community_order">
        <item>Alphabetical</item>
        <item>Member Count: Low To High</item>
        <item>Member Count: High To Low</item>

    </string-array>

    <string-array name="member_order">
        <item>Alphabetical</item>
        <item>Newest to Oldest</item>
    </string-array>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="settings">Settings</string>
    <string name="make_community_message">Create Community</string>
    <string name="make_community_name">community name</string>
    <string name="make_community_add_photo">Add Photo</string>
    <string name="make_community_miles_default">-</string>
    <string name="no_account_yet_create_one">No account yet? Create one!</string>
    <string name="app_name_caps">BLIPP</string>
    <string name="add_photo">Add Photo</string>
</resources>
