<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".UI.BlippContentActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_blipp_content">



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@color/blipp_dark"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/blipp_offset"
        app:tabIndicatorGravity="bottom"
        app:tabMode="fixed"
        app:tabPaddingEnd="2dp"
        app:tabPaddingStart="2dp"
        app:tabSelectedTextColor="@color/blipp_light"
        app:tabTextColor="@color/blipp_white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tab_1"
            android:textAlignment="center" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tab_2"
            android:textAlignment="center" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tab_3" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tab_4"
            android:textAlignment="center" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tab_5"
            android:textAlignment="center" />


    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/fragment_place_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        >

    </FrameLayout>

</LinearLayout>