<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="horizontal">

    <TextView
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="2"
        android:textColor="@color/blipp_white"
    android:text="@string/feed_distance_lbl"
    ></TextView>

    <Spinner
        android:id="@+id/spinner_feed"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        >
    </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textColor="@color/blipp_white"
            android:text="@string/feed_order_lbl"
            ></TextView>

        <Spinner
            android:id="@+id/spinner_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
        </Spinner>

    </LinearLayout>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="23"
    android:background="@color/blipp_light"
    >

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swiperefresh_feed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >
    <ListView
    android:id="@+id/list_feed"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_blipp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blipp_grey"
        app:borderWidth="0dp"
        android:contentDescription="@string/fab_description"
        android:src="@drawable/ic_add_24px"></com.google.android.material.floatingactionbutton.FloatingActionButton>

</FrameLayout>
</LinearLayout>