<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UI.ResetPasswordActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.Light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <RelativeLayout
            android:layout_width="209dp"
            android:layout_height="43dp"
            android:layout_marginBottom="140dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name_caps"
                android:textAllCaps="true"
                android:textSize="36sp" />

            <View
                android:id="@+id/dummy"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="67dp"
                android:rotation="-9"
                app:srcCompat="@mipmap/blipp_icon_foreground" />

        </RelativeLayout>

        <TextView
            android:id="@+id/login_btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:text="uh ohh, forgot your password? Don't worry, we've made it easy."
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/login_email"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reset_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_submit"
            android:layout_marginTop="40dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_reset"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>