<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.LoginActivity"
    android:background="@color/blipp_medium">


    <TextView
        android:id="@+id/make_community_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_max="800dp"
        app:layout_constraintHeight_max="200dp"
        app:layout_constraintWidth_min="400dp"
        app:layout_constraintHeight_min="50dp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/make_community_message"
        android:textAlignment="center"
        android:textColor="@color/blipp_offset"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="3dp" />


    <EditText
        android:inputType="text"
        android:id="@+id/make_community_name"
        android:autofillHints="@string/make_community_name"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintHeight_max="50dp"
        app:layout_constraintWidth_min="200dp"
        app:layout_constraintHeight_min="45dp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintTop_toBottomOf="@id/make_community_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/make_community_add_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="1dp"
        android:hint="@string/make_community_name"
        android:background="@color/blipp_offset" />

    <Button
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintHeight_max="50dp"
        app:layout_constraintWidth_min="200dp"
        app:layout_constraintHeight_min="45dp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="wrap"
        android:text="Add Photo"
        android:id="@+id/make_community_add_photo"
        android:hint="@string/make_community_add_photo"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/make_community_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/make_community_photo"
        android:background="@color/blipp_offset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        />


    <ImageView
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintHeight_max="300dp"
        app:layout_constraintWidth_min="200dp"
        app:layout_constraintHeight_min="200dp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="wrap"
        android:inputType="textPassword"
        android:id="@+id/make_community_photo"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/make_community_add_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/make_community_miles_display"
        android:background="@color/blipp_offset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@mipmap/blipp_logo_foreground"
        >
    </ImageView>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintHeight_max="50dp"
        app:layout_constraintWidth_min="200dp"
        app:layout_constraintHeight_min="45dp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintTop_toBottomOf="@id/make_community_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/make_community_miles_selector"
        android:background="@color/blipp_offset"
        android:id="@+id/make_community_miles_display"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/make_community_miles_default"
        android:layout_width="0dp"
        android:layout_height="0dp"
        >
    </TextView>

    <SeekBar
        android:layout_marginTop="3dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintHeight_max="50dp"
        app:layout_constraintWidth_min="200dp"
        app:layout_constraintHeight_min="45dp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintTop_toBottomOf="@id/make_community_miles_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/make_community_btn_submit"
        android:id="@+id/make_community_miles_selector"
        android:inputType="phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blipp_offset"
        android:max="99"
        />



    <Button
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintWidth_max="150dp"
        app:layout_constraintHeight_max="50dp"
        app:layout_constraintWidth_min="75dp"
        app:layout_constraintHeight_min="25dp"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintTop_toBottomOf="@id/make_community_miles_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/make_community_btn_submit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blipp_white"
        android:text="@string/register_button_submit" />

</androidx.constraintlayout.widget.ConstraintLayout>