<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.LoginActivity"
    android:background="@color/blipp_medium">


    <TextView
        android:id="@+id/change_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_max="600dp"
        app:layout_constraintHeight_max="100dp"
        app:layout_constraintWidth_min="200dp"
        app:layout_constraintHeight_min="50dp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/change_email"
        android:text="Change your information."
        android:textAlignment="center"
        android:textColor="@color/blipp_offset"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />


    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/change_email"
        android:autofillHints="@string/register_email"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintHeight_max="50dp"
        app:layout_constraintWidth_min="200dp"
        app:layout_constraintHeight_min="45dp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintTop_toBottomOf="@id/change_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/change_current_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/register_email"
        android:background="@color/blipp_offset" />

    <EditText
        android:autofillHints="idk"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintHeight_max="50dp"
        app:layout_constraintWidth_min="200dp"
        app:layout_constraintHeight_min="45dp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="wrap"
        android:id="@+id/change_current_password"
        android:hint="current password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/change_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/change_new_password"
        android:background="@color/blipp_offset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        >
    </EditText>

    <EditText
        android:autofillHints="@string/register_password_confirm"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintHeight_max="50dp"
        app:layout_constraintWidth_min="200dp"
        app:layout_constraintHeight_min="45dp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="wrap"
        android:inputType="textPassword"
        android:id="@+id/change_new_password"
        android:hint="new password"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/change_current_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/change_name"
        android:background="@color/blipp_offset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        >
    </EditText>

    <EditText
        android:autofillHints="@string/register_name"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintHeight_max="50dp"
        app:layout_constraintWidth_min="200dp"
        app:layout_constraintHeight_min="45dp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintTop_toBottomOf="@id/change_new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/change_phone"
        android:background="@color/blipp_offset"
        android:id="@+id/change_name"
        android:hint="@string/register_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        >
    </EditText>

    <EditText
        android:autofillHints="@string/register_phone_number"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintHeight_max="50dp"
        app:layout_constraintWidth_min="200dp"
        app:layout_constraintHeight_min="45dp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintTop_toBottomOf="@id/change_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/change_id"
        android:id="@+id/change_phone"
        android:hint="@string/register_phone_number"
        android:inputType="phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blipp_offset"
        >
    </EditText>


    <TextView
        android:autofillHints="@string/register_phone_number"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintWidth_max="1000dp"
        app:layout_constraintHeight_max="200dp"
        app:layout_constraintWidth_min="100dp"
        app:layout_constraintHeight_min="100dp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintTop_toBottomOf="@id/change_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/change_btn_submit"
        android:id="@+id/change_id"
        android:text="*UUID*"
        android:lines="4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        >
    </TextView>

    <Button
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintWidth_max="150dp"
        app:layout_constraintHeight_max="50dp"
        app:layout_constraintWidth_min="75dp"
        app:layout_constraintHeight_min="25dp"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintTop_toBottomOf="@id/change_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/change_btn_delete"
        android:id="@+id/change_btn_submit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blipp_white"
        android:text="@string/register_button_submit" />

    <Button
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintWidth_max="150dp"
        app:layout_constraintHeight_max="50dp"
        app:layout_constraintWidth_min="75dp"
        app:layout_constraintHeight_min="25dp"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintTop_toBottomOf="@id/change_btn_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/change_btn_delete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blipp_red"
        android:text="Delete Account" />

</androidx.constraintlayout.widget.ConstraintLayout>